--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         </ol>
         <li>Lorem ipsum dolor sit amet.</li>
     </ol>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime nulla at exercitationem nihil soluta sed,
+        ut quos modi ab debitis magnam a odit autem amet quisquam. Est, amet numquam!
+    </p>
 
     <a href="mailto:lethilanphuong.tin2@gmail.com">Gửi email cho tôi</a>
 </body>
