--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         ut quos modi ab debitis magnam a odit autem amet quisquam. Est, amet numquam!
     </p>
 
-    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur nihil numquam fugit in ut atque saepe
-        dignissimos ex eveniet expedita deserunt aliquam, consectetur nulla! Corporis voluptatem accusantium obcaecati
-        magni ad!</h2>
+    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam neque voluptates eius beatae, repellat
+        sapiente magnam eos! Reprehenderit est ullam explicabo modi distinctio voluptatibus necessitatibus? Debitis,
+        sunt quae! Architecto, corrupti?</h2>
 
     <a href="mailto:lethilanphuong.tin2@gmail.com">Gửi email cho tôi</a>
 </body>
